--- a/다울 2025-09-23.md
+++ b/다울 2025-09-23.md
@@ -41,6 +41,6 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 ## 정리가 필요한 메모는 아래에
 
 ###### 조체선료(Demurrage) 계산 핵심 용어 정리
-![[journals/temp/조체선료(Demurrage) 계산 핵심 용어 정리]]
+![[temp/조체선료(Demurrage)_계산_핵심_용어_정리]]
 
 
