--- a/다울 2025-12-03.md
+++ b/다울 2025-12-03.md
@@ -48,4 +48,4 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 
 소스 정리
 ###### 소스 인수인계 관련
-![[journals/temp/소스 인수인계 관련]]
+![[../noGitSync/cd/md_file/소스 인수인계 관련]]
