--- a/다울 2025-12-08.md
+++ b/다울 2025-12-08.md
@@ -5,7 +5,7 @@ aliases:
 tags: [다울일간노트]
 ---
 
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2025-12-19
 지난 주 금: [[다울 2025-12-05]]
 Tomorrow: [[다울 2025-12-09]] 
 
@@ -40,5 +40,5 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 
 ## 정리가 필요한 메모는 아래에
 
-[[temp/소스 인수인계 관련|소스 인수인계 관련]]
+[[../noGitSync/cd/md_file/소스 인수인계 관련|소스 인수인계 관련]]
 
