--- a/다울 2025-12-23.md
+++ b/다울 2025-12-23.md
@@ -20,7 +20,7 @@ Tomorrow: [[다울 2025-12-24]]
 - [ ] 이직확인서는 퇴사할 때 접수되니까 괜찮을거같고
 - [x] 경력증명서는 받을 수 있고 ✅ 2025-12-23
 - [x] 사직서 작성 ✅ 2025-12-23
-- [ ] 사직서 제출
+- [x] 사직서 제출 ✅ 2025-12-23
 
 
 
